[package]
name = "meap"
description = "Minimal Extensible Argument Parser"
version = "0.4.3"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/meap.git"
repository = "https://github.com/gridbugs/meap.git"
documentation = "https://docs.rs/meap"

[dependencies]

[dev-dependencies]
parse_duration = "2.1.0"

[[example]]
name = "basic"

[[example]]
name = "macro"

[[example]]
name = "all"
